#cleaning conversations and messaging fixed , unnecesary request removed some methods optimized